# resource/swagger/swagger_output.json
@@ -9,7 +9,7 @@
   "basePath": "/",
   "tags": [
     {
-      "name": "User",
+      "name": "Usuario",
       "description": "Endpoints"
     },
     {
@@ -83,6 +83,35 @@
             "name": "Endpoints without path or method"
           }
         ],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/login": {
+      "get": {
+        "tags": [
+          "Usuario"
+        ],
+        "description": "Endpoint para crear un usuario.",
+        "parameters": [
+          {
+            "name": "nombreUsuario",
+            "description": "nombre de usuario.",
+            "type": "string"
+          },
+          {
+            "name": "clave",
+            "description": "clave de usuario.",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/register": {
+      "post": {
+        "tags": [],
         "description": "",
         "parameters": [],
         "responses": {}
